[package]
name = "lockdown_unlocked"
version = "0.1.0"
edition = "2021"

[lib]
name = "lockdown_unlocked"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.79"
ilhook = "2.1.1"
once_cell = "1.19.0"
parking_lot = "0.12.1"
# todo: remove unneeded features
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Environment",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_Input",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI",
] }
