[workspace]
members = ["launcher", "injection"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.79"
dll-syringe = "0.15.2"
embed-resource = "2.4"
ilhook = "2.1.1"
once_cell = "1.19.0"
parking_lot = "0.12.1"
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.16"
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Environment",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Threading",
    "Win32_UI_Input",
    "Win32_UI_Shell",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI",
] }
winreg = "0.52.0"
